# moneycounter

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: ci_testing.yml
.github/workflows/: ci_testing.yml
src/: dt.py  pnl.py
src/moneycounter/: __init__.py  pnl.py  prices.py
tests/: fifo_tests.py  pnl_tests.py  prices_tests.py  test_base.py  trades.csv
